# docker-reconciler

./: .ansible-lint  .editorconfig  .env.example  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  DEVIATIONS.md  MODELS.md  README.md  TASK_PROGRESS.md  agents.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
ansible/group_vars/: all.yml
ansible/manifests/: web.yml
ansible/playbooks/: backup.yml  provision.yml  restore.yml
ansible/roles/storage/tasks/: main.yml
ansible/roles/validate/tasks/: main.yml
config/: dev.toml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  MODELS.md  PLAYBOOK.md  TESTING.md
runbook/: .quality.py  backup.py  quality-checks  restore.py  start.py  stop.py  test_dev_env.py
src/: main.py
src/models/: __init__.py  ansible.py  contract.py  manifest.py  service.py  state.py
src/reconciler/: __init__.py  controller.py  model.py  observer.py  transitions.py
src/utils/: __init__.py  ansible.py  config.py  executor.py  log.py  types.py  validate_contract.py  validate_manifest.py  validate_no_duplicates.py
tests/: test_config.py  test_models.py  test_reconciler.py  test_utils.py
