[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "docker-reconciler"
version = "0.1.0"
description = "Stub reconciler"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "src" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.0.0"
tomli = { version = "^2.0.1", markers = "python_version < '3.11'" }

[tool.poetry.group.dev.dependencies]
ruff = "^0.9.0"
pyright = "^1.1.0"
lizard = "^1.17.10"
import-linter = "^2.0.0"
pre-commit = "^4.0.0"
pytest = "^8.0.0"
ansible = ">=8.0.0"
ansible-lint = ">=6.0.0"
pyyaml = "^6.0.0"
ansible-dev-tools = "^26.3.1"

[tool.poetry.scripts]
reconciler = "src.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.13"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.importlinter]
root_package = "src"

[[tool.importlinter.contracts]]
name = "Reconciler must not import utils"
type = "forbidden"
source_modules = ["src.reconciler"]
forbidden_modules = ["src.utils"]

[[tool.importlinter.contracts]]
name = "Utils must not import reconciler"
type = "forbidden"
source_modules = ["src.utils"]
forbidden_modules = ["src.reconciler"]

[[tool.importlinter.contracts]]
name = "Models must not import anything internal"
type = "forbidden"
source_modules = ["src.models"]
forbidden_modules = ["src.reconciler", "src.utils"]
